--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
     </div>
     <div class="destination-wrapper">
       <div class="container">
-          <div class="destinations">
-          
+        <div class="heading">
+          <h2>Please take a look at our Best Destination!</h2>
+        </div>
+        <div class="destinations">
           <div class="destination">
               <div style="background-image: url(src/bali.png);" class="destination-image">
                   <p>BERATAN, BALI</p>
@@ -59,7 +61,7 @@
           </div>
           <div class="destination">
               <div style="background-image: url(src/lombok.png);" class="destination-image">
-                  <p>LOMBOK</p>
+                  <p>LOMBOK ISLAND</p>
                   <button>View Details</button>
               </div>
           </div>
